fixes z-index issue on sidebar

--- a/public/assets/css/custom.less
+++ b/public/assets/css/custom.less
@@ -1212,7 +1212,7 @@ input {
       display: flex;
       justify-content: center;
       border-radius: 0 50% 50% 0;
-      z-index: 2;
+      z-index: 12;
       flex-direction: column;
       cursor: pointer;
     img{
